# 25_web_hw-8

./: authors.json  consumer.py  consumer_email.py  consumer_sms.py  main.py  model_contact.py  models.py  poducer.py  pyproject.toml  seed.py
