[tool.poetry]
name = "25-web-hw-8"
version = "0.1.0"
description = ""
authors = ["AndreShiZap <andreshizap@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.10.1"
mongoengine = "^0.29.1"
pika = "^1.3.2"
redis = "^5.1.1"
redis-lru = "^0.1.2"
celery = "^5.4.0"
faker = "^30.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
